--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-gama",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mitestainer.github.io/portfolio-gama/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -19,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
